2002-09-24  David Hyatt  <hyatt@apple.com>

	Fix updating of the document's notion of the focused node
	to happen on mouse down rather than click.  This matches
	the behavior of all other browsers (IE, Gecko, etc.).

	This fixes the drawing of the outline on the brainjar.com
	DHTML menus.
	
        * khtml/khtmlview.cpp:
        (KHTMLView::dispatchMouseEvent):

2002-09-24  David Hyatt  <hyatt@apple.com>

	Make sure that changes to the CLASS attribute mark the
	element as changed (as if a CSS property were added or
	removed).

	This makes the brainjar.com rollovers work much better.
	
        * khtml/html/html_elementimpl.cpp:
        (HTMLElementImpl::parseAttribute):

2002-09-24  Chris Blumenberg  <cblu@apple.com>

	Renamed element info keys to WebElement* instead of WebContextMenuElement*

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]):

2002-09-24  Darin Adler  <darin@apple.com>

	- fixed 3056579 -- various crashes at http://www.auspost.com.au/

	Apparently the strings at this site were just the right length to expose a bug
	in our QString implementation, one that I probably introduced when fixing 3032072.
	One nice thing about this is that getting this correct could also result in a
	little bit of a speedup, as the internal buffer is used more.

        * kwq/KWQString.mm:
        (QStringData::makeAscii): Set _maxAscii to QS_INTERNAL_BUFFER_CHARS when using
	the internal buffer instead of leaving it uninitialized.
        (QStringData::makeUnicode): Same for _maxUnicode.

2002-09-24  Darin Adler  <darin@apple.com>

	Remove the focus border hack, which was no longer doing us any good.

        * kwq/KWQNSTextField.h: Don't define FOCUS_BORDER_SIZE.
        * kwq/KWQNSTextField.mm: Remove KWQTextFieldCell.
        (-[KWQNSTextField updateSecureFieldFrame]): Don't inset by FOCUS_BORDER_SIZE.
        * kwq/qt/qlineedit.h: Don't override frameGeometry and setFrameGeometry any more.